ZumZumFinancials_Dev1/src/objects/BankTransfer__c.object
<CustomObject>
    <fields>
        <fullName>Account_To__c</fullName>
        <label>Account To</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>BankTransfer (Account To)</relationshipLabel>
        <relationshipName>BankTransfer1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounts_From__c</fullName>
        <label>Accounts From</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>BankTransfer (Accounts From)</relationshipLabel>
        <relationshipName>BankTransfer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Value__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>BankTransfer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BankTransfer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>